feat: add Get() MPS API for EthernetPortSettings
